Coding part of the assignment done!:D